# pantry-cooking-vibes

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml  release.yml
data/seed/: canonical_seed.csv  demo.jsonl
db/: schema.sql
db/migrations/: 002_recipes_source_hellofresh.sql  004_drop_recipes_without_image.sql
docker/: entrypoint.sh
docs/: architecture.md  cli.md  database.md  importers.md  jsonl_contract.md  mcp.md  testing.md  web.md
scripts/: build_demo_jsonl.py  check_image_memory.py  cleanup_db.py  extract_pantry_candidates.py  review_pantry_candidates.py  update_freshness.py
scripts/seed/: gen_seed.py
src/pantry_cooking_vibes/: cli.py  dates.py  db.py  models.py
src/pantry_cooking_vibes/_assets/: canonical_seed.csv  schema.sql
src/pantry_cooking_vibes/_assets/migrations/: 001_recipe_favorites.sql  003_recipes_source_freeform.sql  004_drop_recipes_without_image.sql  005_meal_plan_favorites.sql  006_canonical_freshness_days.sql
src/pantry_cooking_vibes/importers/: _nutrition.py  _utils.py  dedup.py  jsonl_ingest.py  normalize.py  registry.py  url_import.py
src/pantry_cooking_vibes/mcp_server/: __init__.py  server.py  tools.py
src/pantry_cooking_vibes/web/: __init__.py  app.py  app_factory.py  deps.py
src/pantry_cooking_vibes/web/routes/: home.py  mappings.py  pantry.py  plans.py  recipes.py
src/pantry_cooking_vibes/web/static/: print.css  style.css
src/pantry_cooking_vibes/web/templates/: base.html  home.html  print_base.html
src/pantry_cooking_vibes/web/templates/mappings/: detail.html  list.html
src/pantry_cooking_vibes/web/templates/pantry/: list.html
src/pantry_cooking_vibes/web/templates/plans/: detail.html  list.html  print.html  shopping.html
src/pantry_cooking_vibes/web/templates/recipes/: detail.html  list.html
tests/: conftest.py  test_cli.py  test_cli_delete.py  test_dates.py  test_db.py  test_ingest_normalize.py  test_jsonl_ingest_dedup.py  test_mcp_tools.py  test_normalize.py  test_registry.py  test_url_import.py  test_web.py
tests/e2e/: README.md  conftest.py  test_favorite_e2e.py  test_image_memory.py  test_mappings_e2e.py  test_no_js_e2e.py  test_pantry_e2e.py  test_pantry_update_e2e.py  test_plan_shopping_e2e.py  test_plans_crud_e2e.py  test_recipe_actions_e2e.py  test_recipe_detail_e2e.py  test_recipes_e2e.py
tests/fixtures/url_import/: seriouseats_pasta_al_tonno.html
