[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pantry-cooking-vibes"
version = "0.1.0"
description = "Local meal-planning system with Claude as planning intelligence"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "extruct>=0.17",
    "rapidfuzz>=3.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.27",
    "mcp>=1.0",
]

[project.scripts]
meal-cli = "pantry_cooking_vibes.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pantry_cooking_vibes"]

[tool.hatch.build.targets.sdist]
include = ["src/", "db/", "data/seed/"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "ty>=0.0.1a4",
    "pre-commit>=4.0",
]
e2e = [
    "pytest-playwright>=0.5",
]

[tool.pytest.ini_options]
markers = [
    "e2e: browser-driven end-to-end tests (require `playwright install`)",
]
addopts = "-m 'not e2e'"
# Scraper sub-repos under scrapers/ have their own conftest.py that collides
# with this core conftest.py during collection. Each scraper is run from its
# own directory (`cd scrapers/<name> && pytest`); core stays out of that tree.
norecursedirs = ["scrapers", ".venv", "data", "db_backups", "node_modules"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [
    "data",
    "db_backups",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # line-too-long (ruff format handles wrapping)
    "B008",  # function call in default arg (FastAPI Depends pattern)
    "SIM117", # nested with statements (often clearer separate)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",   # assert allowed in pytest
    "S105",   # hardcoded password strings (test fixtures)
    "S106",   # hardcoded password func args
    "S310",   # urlopen in fixtures (controlled localhost URLs)
    "S311",   # non-cryptographic random (test data)
    "S603",   # subprocess in fixtures (controlled args list)
    "S608",   # SQL injection (tests construct SQL intentionally)
]
"scripts/**" = [
    "S101",
    "S603",   # subprocess call review
    "S607",   # partial executable path
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["pantry_cooking_vibes"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.ty.environment]
root = ["./src"]
python-version = "3.11"

[tool.ty.rules]
# Use ty defaults; tighten as codebase adopts annotations.
